# HuanF-CodeX

./: CMakeLists.txt  README.md  go.mod  temp.cpp  temp.go
AutoCp/: D_Palindrome_Shuffle.cpp
BIT/: AcWing241.cpp  BIT.cpp  BIT.md  BIT_Inversion.md  D2BIT.cpp  P1439.cpp  P1637.cpp  P1637_1.cpp  P1637_2.cpp  P1908.cpp  P1908_Inversion.cpp  P1966.cpp  P1972.cpp  P3368.cpp  P3372.cpp  P3372.md  P3374.cpp  P3586.cpp  P3586_LOG_solution.md  P3605.cpp  Validator_lexi_max_lcs.cpp  lexi_max_lcs_perm.cpp
Calendar/: Calendar.md
Code Instrumentality Initiative/: CodeX.md  README.md  Unsolved.md
Code Instrumentality Initiative/DP1/: P1273.cpp  P2014.cpp  P2585.cpp  P3047.cpp  P3358.cpp  README.md
Convex Hul/: P1452.cpp  ZhengZhouCCPC2025L.cpp
D2BIT/: D2BIT.cpp  D2BIT.markdown  D2BIT.md  P4054.cpp  P4514.cpp  P4514.md
DP/DAG on DP/: 208C.cpp  P1137.cpp  P4017.cpp  ShaanXi2024C.cpp
DP/Expectation/: P8774.cpp
DP/Kadane/: P1115.cpp
DSU/: 2060E.cpp  ABC408E.cpp  DSU.cpp
DeepSeek/: README.md
Greedy Tian Ji’s Horse Racing/: P12161.cpp  P1650.cpp  P2587 .cpp
LCA/: BL_LCA.md  P3379.cpp
Lucas/: Lucas.cpp  Lucas.md  P3807_Lucas_.cpp
MAT/: 2024HeiBeiCPC-J.cpp  MAT.cpp  MAT.md  P1349.cpp  P3390.cpp  P3758.cpp  P4783.cpp
MST/: Kruskal.cpp  Kruskal.md  P1195.cpp  P12158.cpp  P3366_K.cpp  P3366_P.cpp  Prim.md  Prime.cpp
Monotonic/: P1886.cpp  P5788.cpp
Persistent/: P3919.cpp  PersistentArray.cpp
SegTree/: 2050F.cpp  ABC408F.cpp  LazySegTree.cpp  P1886.cpp  P3372.cpp  P3373.cpp  SegTree.cpp  SegmentTree.md
Tire/: 2093G.cpp  P8306.cpp  Tire.cpp
(+617 files in other folders)
